--- a/AppFoody/app/build.gradle
+++ b/AppFoody/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha3'
     implementation 'com.google.firebase:firebase-core:16.0.7'
-
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.6'
