--- a/AppFoody/app/src/main/AndroidManifest.xml
+++ b/AppFoody/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.appfoody">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,11 +31,19 @@
         </activity>
 
         <activity android:name=".View.TrangChuActivity">
+
+        </activity>
+
+        <activity android:name=".View.BinhLuanActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".View.ChonHinhBinhLuanActivity">
+
         </activity>
 
     </application>
