--- a/AppFoody/app/src/main/AndroidManifest.xml
+++ b/AppFoody/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
 
         <activity android:name=".View.ChiTietQuanAnActivity">
 
