--- a/AppFoody/app/src/main/AndroidManifest.xml
+++ b/AppFoody/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
 
         </activity>
 
+        <activity android:name=".View.ThemQuanAnActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
